--- a/gateway/proxy.conf
+++ b/gateway/proxy.conf
@@ -1,10 +1,23 @@
 server{
   listen 80;
 
+  resolver 127.0.0.11 valid=30s;
+  set $users_upstream http://users:5000;
+  set $articles_upstream http://articles:5000;
+  
   location /users {
-      proxy_pass http://users:5000/users;
+      proxy_pass $users_upstream;
   }
   location /login {
-      proxy_pass http://users:5000/login;
+      proxy_pass $users_upstream;
+  }
+  location /search {
+      proxy_pass $articles_upstream;
+  }
+  location /articles{
+      proxy_pass $articles_upstream;
+  }
+  location /articles{
+      proxy_pass $articles_upstream;
   }
 }
