--- a/gateway/proxy.conf
+++ b/gateway/proxy.conf
@@ -4,6 +4,7 @@ server{
   resolver 127.0.0.11 valid=30s;
   set $users_upstream http://users:5000;
   set $articles_upstream http://articles:5000;
+  set $comments_upstream http://comments:5000;
   
   location /users {
       proxy_pass $users_upstream;
@@ -17,7 +18,7 @@ server{
   location /articles{
       proxy_pass $articles_upstream;
   }
-  location /articles{
-      proxy_pass $articles_upstream;
+  location ~ \/articles\/[A-Za-z0-9]+\/comments{
+      proxy_pass $comments_upstream;
   }
 }
