--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "vue": "^2.3.3",
+    "vue-global": "0.0.3",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.7.0"
   },
