Removing Rabbitmq for rest http

--- a/comments/Dockerfile
+++ b/comments/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3
 CMD ["python", "/app/commentsBackend.py"]
-ADD libs.txt authClient.py /app/
+ADD libs.txt /app/
 RUN pip install -r /app/libs.txt
 ADD commentsBackend.py /app/commentsBackend.py
