--- a/articles/Dockerfile
+++ b/articles/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3
 CMD ["python", "/app/articlesBackend.py"]
-ADD libs.txt authClient.py /app/
+ADD libs.txt /app/
 RUN pip install -r /app/libs.txt
 ADD articlesBackend.py /app/articlesBackend.py 
