--- a/gateway/proxy.conf
+++ b/gateway/proxy.conf
@@ -1,11 +1,15 @@
 server{
-  listen 8080;
+  listen 80;
 
   resolver 127.0.0.11 valid=30s;
+  set $app_upstream http://app:80;
   set $users_upstream http://users:5000;
   set $articles_upstream http://articles:5000;
   set $comments_upstream http://comments:5000;
   
+  location / {
+      proxy_pass $app_upstream;
+  }
   location /users {
       proxy_pass $users_upstream;
   }
